--- a/VocationManager.Web/Views/Users/Details.cshtml
+++ b/VocationManager.Web/Views/Users/Details.cshtml
@@ -100,70 +100,14 @@
 </div>
 
 <script>
-    var availableTeams = $('.available-teams').val();
-
-    var teamInputs = {};
-    if (!availableTeams.includes("#")) {
-        let teamTokens = availableTeams.split("+=+");
-        teamInputs[teamTokens[0]] = teamTokens[1];
-    } else {
-        for (var team of availableTeams.split("#")) {
-            let teamTokens = team.split("+=+");
-
-            teamInputs[teamTokens[0]] = teamTokens[1];
-        }
-    }
-
-
-    console.log(teamInputs);
     $(".assing-btn").on("click", function () {
-        const { value: fruit } = Swal.fire({
-            title: 'Select a team',
-            input: 'select',
-            inputOptions: teamInputs,
-            inputPlaceholder: 'Select a team',
-            showCancelButton: true,
-            inputValidator: (value) => {
+        
+        var model = {
+            userId: $(".Id").val(),
+        }
 
-                if (value == "") {
-                    return Swal.fire(
-                        'Error!',
-                        'Please choose a team!',
-                        'error'
-                    );
-                } else {
-                    return new Promise((resolve) => {
-                        var model = {
-                            userId: $(".Id").val(),
-                            teamId: value
-                        }
-
-                        $.ajax({
-                            type: "POST",
-                            url: "/Users/AssignUserToTeam",
-                            data: model,
-                            dataType: "json",
-                            success: function (response) {
-                                Swal.fire(
-                                    'Success!',
-                                    'User was successfully assigned to the team!',
-                                    'success'
-                                ).then(() => window.location.reload());
-                            },
-                            error: function (event, jqxhr, settings, thrownError) {
-                                if (event.status != 200) {
-                                    Swal.fire(
-                                        'Error!',
-                                        event.responseText.split(': ')[1].split("\r\n")[0],
-                                        'error'
-                                    );
-                                }
-                            }
-                        });
-                    });
-                }
-            }
-        });
+        let teams = parseTeamInputs('.available-teams');
+        startAssigningToTeam(teams, model, "/Users/AssignUserToTeam");
     });
 </script>
 
