Добавени TimeOffs domain entity & TimeOffsController & TimeOffsService

--- a/VocationManager.Web/Views/Projects/Index.cshtml
+++ b/VocationManager.Web/Views/Projects/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@using VocationManager.Services
-@using System.Security.Claims
+@using VocationManager.Data.Enums
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@using VocationManager.Data
 @model VocationManager.Services.DTOs.Projects.PaginatedProjectsCollectionDto?
 
 @{
