--- a/VocationManager.Web/Views/TimeOffs/Create.cshtml
+++ b/VocationManager.Web/Views/TimeOffs/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model VacationManager.Models.TimeOff
+﻿@*@model VacationManager.Models.TimeOff
 @using VacationManager.Models;
 @using VacationManager.ExtentionMethods;
 
@@ -55,3 +55,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+*@
