--- a/VocationManager.Web/Views/TimeOffs/Delete.cshtml
+++ b/VocationManager.Web/Views/TimeOffs/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model VacationManager.Models.TimeOff
+﻿@*@model VacationManager.Models.TimeOff
 
 @{
     ViewData["Title"] = "Delete";
@@ -49,3 +49,4 @@
         <a class="btn-primary" asp-action="Index">Back to List</a>
     </form>
 </div>
+*@
