--- a/VocationManager.Web/Views/TimeOffs/Edit.cshtml
+++ b/VocationManager.Web/Views/TimeOffs/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model VacationManager.Models.TimeOff
+﻿@*@model VacationManager.Models.TimeOff
 @using VacationManager.ExtentionMethods;
 
 @{
@@ -86,3 +86,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+*@
