--- a/VocationManager.Web/Views/TimeOffs/Index.cshtml
+++ b/VocationManager.Web/Views/TimeOffs/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<VacationManager.Models.TimeOff>
+﻿@*@model IEnumerable<VacationManager.Models.TimeOff>
 @using VacationManager.ExtentionMethods;
 
 @{ ViewData["Title"] = "Index";
@@ -141,3 +141,4 @@
     </tbody>
 </table>
 
+*@
