--- a/VocationManager.Web/Views/Teams/Details.cshtml
+++ b/VocationManager.Web/Views/Teams/Details.cshtml
@@ -2,7 +2,9 @@
 @using System.Security.Claims
 @using GlobalConstants
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@using VocationManager.Data
+@using VocationManager.Data;
+@using VocationManager.Data.Enums
+    using VocationManager.Data.Enums
 @model VocationManager.Services.DTOs.Teams.TeamDto
 
 @{
