--- a/VocationManager.Web/Views/TimeOffs/Create.cshtml
+++ b/VocationManager.Web/Views/TimeOffs/Create.cshtml
@@ -1,58 +1,62 @@
-﻿@*@model VacationManager.Models.TimeOff
-@using VacationManager.Models;
-@using VacationManager.ExtentionMethods;
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers;
+@model VocationManager.Services.DTOs.TimeOffs.CreateTimeOffRequestDto;
 
 @{
     ViewData["Title"] = "Create";
- Layout = "_Layout";
- User loggedUser = this.ViewContext.HttpContext.Session.GetObject<User>("loggedUser");
+
+    var requestTypes = ((IEnumerable<KeyValuePair<string, string>>)this.ViewBag.RequestTypes).Select(x => new SelectListItem(x.Value, x.Key.ToString()));
 }
 
-<h1>Create</h1>
-
-<h4>TimeOff</h4>
-    <div class="form-container">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="From" class="control-label"></label>
-                <input type="date" asp-for="From" class="form-control"/>
-                <span asp-validation-for="From" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="To" class="control-label"></label>
-                <input type="date" asp-for="To" class="form-control" />
-                <span asp-validation-for="To" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
-                <select id="Type" name="Type" runat="server">
-                    <option value="Paid">Paid</option>
-                    <option value="Unpaid">Unpaid</option>
-                    <option value="Sick">Sick</option>
-                </select>
-                <span asp-validation-for="Type" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    @Html.DisplayNameFor(model => model.HalfDay)
-                    <input class="form-check-input" asp-for="HalfDay" />
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <input type="hidden" asp-for"RequestingUser" id="RequestingUser" name="RequestingUser" value=@loggedUser.Username />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="card light-shadow m-0 m-auto col-5">
+    <div class="img-fluid text-center mt-2">
+        <img class="card-img-top img-fluid" style="width: 20rem" style="object-fit: contain" src="https://images.unsplash.com/photo-1579444741963-5ae219cfe27c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="create image">
     </div>
+    <div class="card-body">
+        <h5 class="card-title">Create new time-off request</h5>
+        <div>
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="From" class="control-label"></label>
+                    <input asp-for="From" class="form-control" />
+                    <span asp-validation-for="From" class="text-danger"></span>
+                </div>
 
-    <div>
-        <a asp-action="Index">Back to List</a>
+                <div class="form-group">
+                    <label asp-for="To" class="control-label"></label>
+                    <input asp-for="To" class="form-control" />
+                    <span asp-validation-for="To" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Type" class="control-label">Request type:</label>
+                    <select asp-for="Type" class="form-control form-control-lg" asp-items="@requestTypes">
+                        <option value="" selected="">Select request type...</option>
+                    </select>
+                </div>
+
+
+                <div class="form-group">
+                    <label asp-for="IsHalfDay" class="control-label"></label>
+                    <input asp-for="IsHalfDay"/>
+                    <span asp-validation-for="IsHalfDay" class="text-danger"></span>
+                </div>
+
+
+                <br />
+                <div class="form-group d-flex justify-content-evenly">
+                    <input type="submit" value="Create" class="btn btn-success" />
+                </div>
+            </form>
+        </div>
     </div>
-
+</div>
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
-*@
+
+                    
+<script>    
+</script>
