--- a/VocationManager.Web/Views/TimeOffs/Edit.cshtml
+++ b/VocationManager.Web/Views/TimeOffs/Edit.cshtml
@@ -1,89 +1,67 @@
-﻿@*@model VacationManager.Models.TimeOff
-@using VacationManager.ExtentionMethods;
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers;
+@model VocationManager.Services.DTOs.TimeOffs.TimeOffRequestDto;
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "_Layout";
-    User loggedUser = this.ViewContext.HttpContext.Session.GetObject<User>("loggedUser");
-}
-<h1>Edit</h1>
 
-<h4>TimeOff</h4>
-<div class="row">
-    <div class="col-md-4">
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.CreatedOn)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.CreatedOn)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.RequestingUser)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.RequestingUser)
-            </dd>
-        </dl>
-        <div class="form-container">
+    var requestTypes = ((IEnumerable<KeyValuePair<string, string>>)this.ViewBag.RequestTypes).Select(x => new SelectListItem(x.Value, x.Key.ToString()));
+}
+
+<div class="card light-shadow m-0 m-auto col-5">
+    <div class="img-fluid text-center mt-2">
+        <img class="card-img-top img-fluid" style="width: 20rem" style="object-fit: contain" src="https://images.unsplash.com/photo-1487017159836-4e23ece2e4cf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80" alt="edit image">
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">Edit time-off request</h5>
+        <div>
             <form asp-action="Edit">
+                <input type="hidden" asp-for="Id"/>
+                <input type="hidden" asp-for="ExternalFileUrl"/>
+                <input type="hidden" asp-for="IsApproved"/>
+                <input type="hidden" asp-for="CreatedOn"/>
+                <input type="hidden" asp-for="RequestedById"/>
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="TimeOffId" />
-                <input type="hidden" asp-for="RequestingUser" />
-                <input type="hidden" asp-for="CreatedOn" />
-                <div class="form-group form-check">
-                    <label class="form-check-label">
-                        @Html.DisplayNameFor(model => model.From)
-                        <input type="date" class="form-check-input" asp-for="From" />
-                    </label>
-                </div>
-                <div class="form-group form-check">
-                    <label class="form-check-label">
-                        @Html.DisplayNameFor(model => model.To)
-                        <input type="date" class="form-check-input" asp-for="To" />
-                    </label>
-                </div>
-                <div class="form-group form-check">
-                    <label class="form-check-label">
-                        @Html.DisplayNameFor(model => model.Type)
-                        <select id="Type" name="Type">
-                            <option value="Paid">Paid</option>
-                            <option value="Unpaid">Unpaid</option>
-                            <option value="Sick">Sick</option>
-                        </select>
-                        <span asp-validation-for="Type" class="text-danger"></span>
-                    </label>
-                </div>
-                <div class="form-group form-check">
-                    <label class="form-check-label">
-                        @Html.DisplayNameFor(model => model.HalfDay)
-                        <input class="form-check-input" asp-for="HalfDay" />
-                    </label>
-                </div>
-                @if (loggedUser.Role > 1)
-                {
-        <div class="form-group form-check">
-            <label class="form-check-label">
-                @Html.DisplayNameFor(model => model.Approved)
-                <input class="form-check-input" asp-for="Approved" /> 
-            </label>
-        </div> }
-                    else
-                    {
-        <input type="hidden" asp-for="Approved" />            }
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <label asp-for="From" class="control-label"></label>
+                    <input asp-for="From" class="form-control"/>
+                    <span asp-validation-for="From" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="To" class="control-label"></label>
+                    <input asp-for="To" class="form-control"/>
+                    <span asp-validation-for="To" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Type" class="control-label">Request type:</label>
+                    <select asp-for="Type" class="form-control form-control-lg" asp-items="@requestTypes">
+                        <option value="" selected="">Select request type...</option>
+                    </select>
+                </div>
+
+
+                <div class="form-group">
+                    <label asp-for="IsHalfDay" class="control-label"></label>
+                    <input asp-for="IsHalfDay"/>
+                    <span asp-validation-for="IsHalfDay" class="text-danger"></span>
+                </div>
+
+
+                <br/>
+                <div class="form-group d-flex justify-content-evenly">
+                    <input type="submit" value="Create" class="btn btn-success"/>
                 </div>
             </form>
         </div>
     </div>
 </div>
-
-<div>
-    <a class="btn-primary" asp-action="Index">Back To List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
-*@
+
+
+<script>
+</script>
