--- a/VocationManager.Web/Views/TimeOffs/Index.cshtml
+++ b/VocationManager.Web/Views/TimeOffs/Index.cshtml
@@ -1,144 +1,170 @@
-﻿@*@model IEnumerable<VacationManager.Models.TimeOff>
-@using VacationManager.ExtentionMethods;
+﻿@using VocationManager.Services
+@using VocationManager.Data.Enums
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model VocationManager.Services.DTOs.TimeOffs.PaginatedTimeOffsCollectionDto?;
 
-@{ ViewData["Title"] = "Index";
-                Layout = "_Layout";
-                User loggedUser = this.ViewContext.HttpContext.Session.GetObject<User>("loggedUser");
-                IEnumerable<Team> teams = ViewData["Teams"] as IEnumerable<Team>;
-                IEnumerable<User> users = ViewData["Users"] as IEnumerable<User>;
-                List<string> teamsManaged = teams.Where(team => team.Leader == loggedUser.Username).Select(team => team.Name).ToList();
-                List<string> usersFromTeamsManaged = users.Where(u => teamsManaged.Contains(u.Team)).Select(user => user.Username).ToList(); }
+@{
+    ViewData["Title"] = "Time-Off Requests";
+}
+<h1>@(ViewData["Title"])</h1>
 
-<p class="btn-primary">
-    <a asp-action="Create">Create New</a>
-</p>
-
-<h1>Index</h1>
-<table class="table-all bordered centered">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.From)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.To)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HalfDay)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedOn)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequestingUser)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Type)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Approved)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (loggedUser.Role == 3)
-        {
-
-@foreach (var item in Model)
+@if (Model.Requests.Any())
 {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.From)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.To)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.HalfDay)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.CreatedOn)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.RequestingUser)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Type)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Approved)
-    </td>
-    <td>
-        <a asp-action="Edit" asp-route-id="@item.TimeOffId">Edit</a>
-        <a asp-action="Delete" asp-route-id="@item.TimeOffId">Delete</a>
-    </td>
-</tr>}}
-
-        @if (loggedUser.Role == 2)
+    <div>
+        @foreach (var requestDto in Model.Requests)
         {
-@foreach (var item in Model.Where(item => usersFromTeamsManaged.Contains(item.RequestingUser)).ToList())
-{
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.From)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.To)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.HalfDay)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.CreatedOn)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.RequestingUser)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Type)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Approved)
-    </td>
-    <td>
-        <a asp-action="Edit" asp-route-id="@item.TimeOffId">Edit</a> |
-        <a asp-action="Delete" asp-route-id="@item.TimeOffId">Delete</a>
-    </td>
-</tr>}}
+            <div class="w-100 d-flex align-items-center bg-white m-1 p-3 rounded-3 light-shadow">
+                <div class="d-inline-flex flex-column col-3">
+                    <strong>Requested Dates: @($"{requestDto.From:dd/MM/yyyy}") - @(requestDto.To.HasValue ? $"{requestDto.To:dd/MM/yyyy}" : "-")</strong>
+                    <span>
+                        Requested by: @($"{requestDto.RequestedBy.FirstName} {requestDto.RequestedBy.LastName}")
+                        <a asp-controller="Users" asp-action="Details" asp-route-id="@requestDto.RequestedById" class="mb-1">
+                            <button class="btn btn-sm btn-primary">
+                                <i class="fas fa-info-circle"></i>
+                            </button>
+                        </a>
+                    </span>
+                </div>
+                <div class="d-inline-flex justify-content-center col-3">
+                    @if (requestDto.IsApproved.HasValue)
+                    {
+                        if (requestDto.IsApproved.Value)
+                        {
+                            <span class="badge bg-success m-2">
+                                <i class="fa-solid fa-person-circle-check"></i> Approved
+                            </span>
+                        }
+                        else
+                        {
+                            <span class="badge bg-danger m-2">
+                                <i class="fa-solid fa-xmark"></i> Declined
+                            </span>
+                        }
+                    }
+                    else
+                    {
+                        <span class="badge bg-secondary m-2">
+                            <i class="fa-solid fa-circle-notch"></i> Waiting
+                        </span>
+                    }
+                </div>
+                <div class="d-inline-flex justify-content-center col-3">
+                    <span class="badge bg-info m-2">
+                        Type of leave: @requestDto.Type.ToString()
+                    </span>
+                </div>
+                <div>
+                    @if (User.IsInRole(Enum.GetName(DefaultRoles.CEO)) || User.IsInRole(Enum.GetName(DefaultRoles.Team_Lead)))
+                    {
+                        @if (!requestDto.IsApproved.HasValue)
+                        {
+                            <button class="btn btn-sm btn-success approve-btn" data-request-id="@requestDto.Id">
+                                <i class="fa-solid fa-check"></i> Approve
+                            </button>
 
-        @if (loggedUser.Role == 1)
-        {
-@foreach (var item in Model.Where(u => u.RequestingUser == loggedUser.Username).ToList())
-{
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.From)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.To)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.HalfDay)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.CreatedOn)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.RequestingUser)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Type)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Approved)
-    </td>
-    <td>
-        <a asp-action="Edit" asp-route-id="@item.TimeOffId">Edit</a> |
-        <a asp-action="Delete" asp-route-id="@item.TimeOffId">Delete</a>
-    </td>
-</tr>}}
-    </tbody>
-</table>
+                            <button class="btn btn-sm btn-danger decline-btn" data-request-id="@requestDto.Id">
+                                <i class="fa-solid fa-xmark"></i> Decline
+                            </button>
+                        }
+                    }
 
-*@
+                    @if (!requestDto.IsApproved.HasValue)
+                    {
+                        <a asp-action="Edit" asp-route-id="@requestDto.Id">
+                            <button class="btn btn-sm btn-warning">
+                                <i class="fas fa-edit"></i> Edit
+                            </button>
+                        </a>
+
+                        <button class="btn btn-sm btn-danger delete-btn" data-request-id="@requestDto.Id">
+                            <i class="fas fa-trash-alt"></i> Delete
+                        </button>
+                    }
+                </div>
+            </div>
+        }
+    </div>
+}
+else
+{
+    <h3>No requests found!</h3>
+}
+
+@await Html.PartialAsync("_SearchAndPaginatePartial", Model.Paginator)
+<script>
+    $('.approve-btn').on("click",
+        function () {
+            var requestId = $(this).attr('data-request-id');
+
+            Swal.fire({
+                title: 'Do you want to approve the time-off request?',
+                showDenyButton: true,
+                confirmButtonText: 'Yes',
+                denyButtonText: `No`,
+            }).then((result) => {
+                if (!result.isConfirmed) return;
+
+                return updateRequestStatus("TimeOffs/ApproveRequest", requestId, 'Approved successfully!');
+            });
+        });
+
+    $('.decline-btn').on("click",
+        function () {
+            var requestId = $(this).attr('data-request-id');
+
+            Swal.fire({
+                title: 'Do you want to decline the time-off request?',
+                showDenyButton: true,
+                confirmButtonText: 'Yes',
+                denyButtonText: `No`,
+            }).then((result) => {
+                if (!result.isConfirmed) return;
+                
+                return updateRequestStatus("TimeOffs/DeclineRequest", requestId, 'Declined successfully!');
+            });
+        });
+
+    
+    $('.delete-btn').on("click",
+        function () {
+            var requestId = $(this).attr('data-request-id');
+
+            Swal.fire({
+                title: 'Do you want to delete the time-off request? This action cannot be undone!',
+                showDenyButton: true,
+                confirmButtonText: 'Yes',
+                denyButtonText: `No`,
+            }).then((result) => {
+                if (!result.isConfirmed) return;
+
+                return updateRequestStatus("TimeOffs/Delete", requestId, 'Deleted successfully!');
+            });
+        });
+
+    function updateRequestStatus(endpoint, requestId, successMessage) {
+        return new Promise((resolve) => {
+            $.ajax({
+                type: "POST",
+                url: endpoint,
+                data: { id: requestId },
+                dataType: "json",
+                error: function (event, jqxhr, settings, thrownError) {
+                    if (event.status != 200) {
+                        Swal.fire(
+                            'Error!',
+                            event.responseText.split(': ')[1].split("\r\n")[0],
+                            'error'
+                        );
+                    } else {
+                        Swal.fire(
+                            'Success!',
+                            successMessage,
+                            'success'
+                        ).then(() => window.location.reload());
+                    }
+                }
+            });
+        });
+    }
+
+</script>
