--- a/BusinessManager.Web/Views/TimeOffs/Create.cshtml
+++ b/BusinessManager.Web/Views/TimeOffs/Create.cshtml
@@ -22,7 +22,7 @@
                     <span asp-validation-for="From" class="text-danger"></span>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group to-date-holder">
                     <label asp-for="To" class="control-label"></label>
                     <input asp-for="To" class="form-control" />
                     <span asp-validation-for="To" class="text-danger"></span>
@@ -36,27 +36,31 @@
                 </div>
 
 
-                <div class="form-group">
+                <div class="form-group half-day-holder">
                     <label asp-for="IsHalfDay" class="control-label"></label>
-                    <input asp-for="IsHalfDay"/>
+                    <input asp-for="IsHalfDay" />
                     <span asp-validation-for="IsHalfDay" class="text-danger"></span>
+                </div>
+
+                <div class="form-group file-holder-holder">
+                    @*                    <label asp-for="IsHalfDay" class="control-label"></label>
+                    <input asp-for="IsHalfDay"/>
+                    <span asp-validation-for="IsHalfDay" class="text-danger"></span>*@
                 </div>
 
 
                 <br />
                 <div class="form-group d-flex justify-content-evenly">
-                    <input type="submit" value="Create" class="btn btn-success" />
+                    <input type="submit" id="submit-btn" value="Create" class="btn btn-success" />
                 </div>
             </form>
         </div>
     </div>
 </div>
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    <script src="~/js/timeoff-validations.js"></script>
 }
 
-                    
-<script>    
-</script>
+@{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
