--- a/BusinessManager.Web/Views/TimeOffs/Edit.cshtml
+++ b/BusinessManager.Web/Views/TimeOffs/Edit.cshtml
@@ -15,21 +15,21 @@
         <h5 class="card-title">Edit time-off request</h5>
         <div>
             <form asp-action="Edit">
-                <input type="hidden" asp-for="Id"/>
-                <input type="hidden" asp-for="ExternalFileUrl"/>
-                <input type="hidden" asp-for="IsApproved"/>
-                <input type="hidden" asp-for="CreatedOn"/>
-                <input type="hidden" asp-for="RequestedById"/>
+                <input type="hidden" asp-for="Id" />
+                <input type="hidden" asp-for="ExternalFileUrl" />
+                <input type="hidden" asp-for="IsApproved" />
+                <input type="hidden" asp-for="CreatedOn" />
+                <input type="hidden" asp-for="RequestedById" />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="From" class="control-label"></label>
-                    <input asp-for="From" class="form-control"/>
+                    <input asp-for="From" class="form-control" />
                     <span asp-validation-for="From" class="text-danger"></span>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group to-date-holder">
                     <label asp-for="To" class="control-label"></label>
-                    <input asp-for="To" class="form-control"/>
+                    <input asp-for="To" class="form-control" />
                     <span asp-validation-for="To" class="text-danger"></span>
                 </div>
 
@@ -41,27 +41,33 @@
                 </div>
 
 
-                <div class="form-group">
+                <div class="form-group half-day-holder">
                     <label asp-for="IsHalfDay" class="control-label"></label>
-                    <input asp-for="IsHalfDay"/>
+                    <input asp-for="IsHalfDay" />
                     <span asp-validation-for="IsHalfDay" class="text-danger"></span>
                 </div>
 
+                <div class="form-group file-holder-holder">
+                    @*                    <label asp-for="IsHalfDay" class="control-label"></label>
+                    <input asp-for="IsHalfDay"/>
+                    <span asp-validation-for="IsHalfDay" class="text-danger"></span>*@
+                </div>
 
-                <br/>
+
+                <br />
                 <div class="form-group d-flex justify-content-evenly">
-                    <input type="submit" value="Create" class="btn btn-success"/>
+                    <input type="submit" id="submit-btn" value="Edit" class="btn btn-success" />
                 </div>
             </form>
         </div>
     </div>
 </div>
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    <script src="~/js/timeoff-validations.js"></script>
 }
-
+@{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 
 <script>
 </script>
