Използване на Dropbox API за качване и сваляне на файлове

--- a/BusinessManager.Web/Views/TimeOffs/Edit.cshtml
+++ b/BusinessManager.Web/Views/TimeOffs/Edit.cshtml
@@ -46,11 +46,13 @@
                     <input asp-for="IsHalfDay" />
                     <span asp-validation-for="IsHalfDay" class="text-danger"></span>
                 </div>
-
+                
+                @*Todo: link for current file*@
                 <div class="form-group file-holder-holder">
-                    @*                    <label asp-for="IsHalfDay" class="control-label"></label>
-                    <input asp-for="IsHalfDay"/>
-                    <span asp-validation-for="IsHalfDay" class="text-danger"></span>*@
+                    <br/>
+                    <label asp-for="ExternalFile" class="control-label"></label>
+                    <input asp-for="ExternalFile" />
+                    <span asp-validation-for="ExternalFile" class="text-danger"></span>
                 </div>
 
 
