--- a/BusinessManager.Web/Views/TimeOffs/Create.cshtml
+++ b/BusinessManager.Web/Views/TimeOffs/Create.cshtml
@@ -14,7 +14,7 @@
     <div class="card-body">
         <h5 class="card-title">Create new time-off request</h5>
         <div>
-            <form asp-action="Create">
+            <form asp-action="Create" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="From" class="control-label"></label>
@@ -43,9 +43,10 @@
                 </div>
 
                 <div class="form-group file-holder-holder">
-                    @*                    <label asp-for="IsHalfDay" class="control-label"></label>
-                    <input asp-for="IsHalfDay"/>
-                    <span asp-validation-for="IsHalfDay" class="text-danger"></span>*@
+                    <br/>
+                    <label asp-for="ExternalFile" class="control-label"></label>
+                    <input asp-for="ExternalFile"/>
+                    <span asp-validation-for="ExternalFile" class="text-danger"></span>
                 </div>
 
 
