--- a/BusinessManager.Web/Views/Home/Index.cshtml
+++ b/BusinessManager.Web/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Business Manager</h1>
-    <h4>Manage time-off requests, teams, projects and the people who work on them - all in one place. For free.</h4>
+    <h4 style="margin-top: 30px">Manage time-off requests, teams, projects and the people who work on them - all in one place. For free.</h4>
 </div>
