--- a/BusinessManager.Web/Views/Teams/Delete.cshtml
+++ b/BusinessManager.Web/Views/Teams/Delete.cshtml
@@ -10,7 +10,7 @@
         <img class="card-img-top img-fluid" style="width: 20rem" style="object-fit: contain" src="https://cdn4.iconfinder.com/data/icons/bookmarks-and-tags/128/Bookmark__Tags_Delete_tag-512.png" alt="delete image">
     </div>
     <div class="card-body">
-        <h5 class="card-title">Are you sure you want to delete this role?</h5>
+        <h5 class="card-title">Are you sure you want to delete this team?</h5>
         <div>
             <dl class="row">
                 <dt class = "col-sm-3">
